Bugfixes to the cgi-boundary detection system.

--- a/tests/test-no_cgi_error-2.html
+++ b/tests/test-no_cgi_error-2.html
@@ -3,6 +3,7 @@
     <title>Test</title>
   </head>
   <body>
-    <p>--------------------------------------------------</p>
+    <p>something
+---------------------</p>
   </body>
 </html>
