--- a/tests/test-encoding-4.html
+++ b/tests/test-encoding-4.html
@@ -10,6 +10,6 @@
     <title>Test</title>
   </head>
   <body style="background:white">
-    <p>It set encoding ISO-8859-1</p>
+    <p>Set encoding ISO-8859-1</p>
   </body>
 </html>
