Better support for content between </body> and </html>.

--- a/tests/test-elm-after-body-5.html
+++ b/tests/test-elm-after-body-5.html
@@ -3,6 +3,6 @@
   <body>
     <p>Hello</p>
   </body>
-<script>Insert this into body</script>
+<i>Insert into p in strict DTDs</i><b>And this, too</b>
 </html>
 
